--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Abouto Your Pet</h2>
         <p>Lorem ipsum dolor sit amet consecteturad
             cing elit aenean a justo quis mauris hendri
-            pellentesque eget at ipsumuis cursusturpi.</p>
+            pellentesque eget at ipsumuis.</p>
         <button class="button-main">Explore</button>
     
     </section>
