fiz alteração no meu sub titulo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <section>
         <h1>We Care</h1>
-        <h2>Abouto Your Pet</h2>
+        <h2>Abouto Your Pet e Cat </h2>
         <p>Lorem ipsum dolor sit amet consecteturad
             cing elit aenean a justo quis mauris hendri
             pellentesque eget at ipsumuis.</p>
